syntax = "proto3";
package prodvana.repo;
option go_package = "github.com/prodvana/prodvana-public/go/prodvana-sdk/proto/prodvana/repo";
import "google/protobuf/timestamp.proto";
import "prodvana/impact_analysis/impact_analysis.proto";

message User {
    string name = 1;
    string email = 2;
}

message Commit {
    string commit_id = 1;
    string url = 2;
    string message = 3;
    User author = 4;
    prodvana.impact_analysis.ImpactAnalysisResult impact_analysis = 5;
    google.protobuf.Timestamp commit_timestamp = 6;
}

message FuzzyCommit {
    string commit_ish = 1;
    string source = 2;
}
